# GraphRAG-Plus

./: .gitignore  README.md
.github/workflows/: ci.yml
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: ConfidenceBar.jsx  GraphView.jsx  Header.jsx  IngestPanel.jsx  QueryBox.jsx  ReasoningStory.jsx  ResultCard.jsx  Spinner.jsx  ThemeToggle.jsx
graphrag_plus/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml
graphrag_plus/app/: __init__.py  cli.py  pipeline.py
graphrag_plus/app/active_learning/: __init__.py  manager.py
graphrag_plus/app/analyst/: __init__.py  engine.py
graphrag_plus/app/api/: main.py
graphrag_plus/app/calibration/: __init__.py  module.py
graphrag_plus/app/config/: settings.py
graphrag_plus/app/contradiction/: __init__.py  reasoner.py
graphrag_plus/app/evaluation/: benchmark.py  metrics.py  runner.py
graphrag_plus/app/extraction/: extractor.py  models.py
graphrag_plus/app/failure/: __init__.py  handler.py
graphrag_plus/app/generation/: __init__.py  generator.py  llm_clients.py
graphrag_plus/app/gnn/: __init__.py  scorer.py
graphrag_plus/app/graph/: store.py
graphrag_plus/app/graph/versioning/: __init__.py  manager.py
graphrag_plus/app/ingestion/: chunker.py  loader.py  models.py
graphrag_plus/app/planning/: __init__.py  query_planner.py
graphrag_plus/app/retrieval/: service.py
graphrag_plus/app/schemas/: models.py
graphrag_plus/app/scoring/: __init__.py  module.py
graphrag_plus/app/tests/: test_ablation.py  test_api.py  test_calibration.py  test_contradiction_reasoner.py  test_failure_modes.py  test_ingestion.py  test_loader_ssrf.py  test_pipeline_integration.py  test_scoring.py  test_trust.py  test_versioning.py
graphrag_plus/app/trust/: __init__.py  manager.py
graphrag_plus/app/utils/: io_utils.py  logging_utils.py  math_utils.py  metrics.py  run_logger.py  runtime.py
graphrag_plus/data/sample_docs/: sample1.txt  sample2.txt
graphrag_plus/examples/: api_requests.http
graphrag_plus/scripts/: check_install.py  demo.ps1  run_ablation.ps1  run_api.ps1
