[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graphrag-plus"
version = "0.1.0"
description = "GraphRAG++: Temporal heterogeneous Graph RAG with trust, calibration, drift, and ablation."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
  "networkx>=3.2.1",
  "numpy>=1.26.4",
  "scikit-learn>=1.4.2",
  "rank-bm25>=0.2.2",
  "python-dateutil>=2.9.0.post0",
  "pypdf>=4.2.0",
  "httpx>=0.27.0",
  "beautifulsoup4>=4.12.3",
  "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
gnn = [
  "torch>=2.2.2",
  "torch-geometric>=2.5.3",
]
embeddings = [
  "sentence-transformers>=2.7.0",
  "faiss-cpu>=1.8.0",
]
extras = [
  "neo4j>=5.20.0",
  "chromadb>=0.5.0",
  "spacy>=3.7.5",
]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.5.0",
  "black>=24.4.0",
  "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
include = ["graphrag_plus*"]

[tool.pytest.ini_options]
testpaths = ["graphrag_plus/app/tests"]
pythonpath = ["."]
addopts = "-q --strict-markers"
markers = [
  "unit: fast unit tests",
  "integration: integration tests",
]
filterwarnings = [
  "ignore::DeprecationWarning:pydantic.*",
]

[tool.ruff]
line-length = 110
target-version = "py311"
extend-exclude = [".tmp", ".cache", "data"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N", "SIM", "PL", "RUF"]
ignore = [
  "E501",   # line length handled by black
  "PLR0913",
  "PLR0912",
  "PLR0915",
  "PLR2004",
  "B008",
]

[tool.ruff.lint.per-file-ignores]
"graphrag_plus/app/tests/*" = ["PLR2004", "S101"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = false
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
strict_optional = true
exclude = ["graphrag_plus/app/tests", ".tmp", ".cache"]

[tool.coverage.run]
source = ["graphrag_plus/app"]
omit = ["graphrag_plus/app/tests/*"]
branch = true

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 60
